# emr-cluster-manager

./: .gitignore  Makefile  Pipfile  README.md  create_db.sql  instances.pickle  main.py  pyproject.toml  settings.toml
core/: cluster.py
handlers/: instances.py
metastore/: base.py  database.py  db.py  instances.py
model/: models.py  schemas.py
models/: base.py  instances.py
tests/: test_apis.py  test_database.py  test_instances.py  tests.py
