[tool.poetry]
name = "emr-cluster-manager"
version = "0.0.1"
description = "A simple tool for EMR cluster management"
authors = ["Denys Nunes <denys.nunes.gonzaga@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.70.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
