[tool.poetry]
name = "emr-cluster-manager"
version = "0.0.1"
description = "A simple tool for EMR cluster management"
authors = ["Denys Nunes <denys.nunes.gonzaga@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.70.0"
asgiref = "^3.4.1"
uvicorn = "^0.15.0"
pydantic = "^1.8.2"
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
requests = "^2.26.0"
dynaconf = "^3.1.7"
bs4 = "^0.0.1"
SQLAlchemy = "^1.4.26"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
